test(sandside): #247 fix SSE test to avoid blocking